# Neural_Machine_Translation

./: NLP_05.ipynb  NLP_05.py  README.md  main.py  pyproject.toml
runs/mt_experiment/: events.out.tfevents.1749384624.MacBook-Air-von-Inoussa.local.28603.0  events.out.tfevents.1749384770.MacBook-Air-von-Inoussa.local.28671.0  events.out.tfevents.1749384797.MacBook-Air-von-Inoussa.local.28714.0  events.out.tfevents.1749385066.MacBook-Air-von-Inoussa.local.28787.0  events.out.tfevents.1749385223.MacBook-Air-von-Inoussa.local.28837.0  events.out.tfevents.1749388111.MacBook-Air-von-Inoussa.local.29001.0  events.out.tfevents.1749391572.MacBook-Air-von-Inoussa.local.29878.0  events.out.tfevents.1749391815.MacBook-Air-von-Inoussa.local.29977.0  events.out.tfevents.1749392309.MacBook-Air-von-Inoussa.local.30115.0  events.out.tfevents.1749407097.MacBook-Air-von-Inoussa.local.32236.0  events.out.tfevents.1749407759.MacBook-Air-von-Inoussa.local.32455.0  events.out.tfevents.1749408486.MacBook-Air-von-Inoussa.local.33368.0  events.out.tfevents.1749408634.MacBook-Air-von-Inoussa.local.33607.0  events.out.tfevents.1749408864.MacBook-Air-von-Inoussa.local.33976.0  events.out.tfevents.1751535073.MacBook-Air-von-Inoussa.local.21682.0
